fixed main on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -32,6 +32,8 @@ main {
 
     flex-direction: column;
 
+    overflow-x: hidden;
+
     #account {
         text-align: center;
 
